Opt: add all existing passed and dialects
This adds all the MLIR and CIRCT dialects and passes to the
standalone-opt tool.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,11 +1,45 @@
 get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)
 get_property(conversion_libs GLOBAL PROPERTY MLIR_CONVERSION_LIBS)
+
 set(LIBS
         ${dialect_libs}
         ${conversion_libs}
-        MLIRArithmetic
         MLIROptLib
         MLIRStandalone
+
+        # TODO drop unnessary dependencies
+        CIRCTAffineToStaticLogic
+        CIRCTAnalysisTestPasses
+        CIRCTCalyx
+        CIRCTCalyxToHW
+        CIRCTCalyxTransforms
+        CIRCTESI
+        CIRCTExportVerilog
+        CIRCTFIRRTL
+        CIRCTFIRRTLToHW
+        CIRCTFIRRTLTransforms
+        CIRCTFSM
+        CIRCTHandshake
+        CIRCTHandshakeToFIRRTL
+        CIRCTHandshakeTransforms
+        CIRCTLLHD
+        CIRCTLLHDToLLVM
+        CIRCTLLHDTransforms
+        CIRCTMoore
+        CIRCTMooreToCore
+        CIRCTMSFT
+        CIRCTHW
+        CIRCTHWToLLHD
+        CIRCTSCFToCalyx
+        CIRCTScheduling
+        CIRCTSchedulingTestPasses
+        CIRCTSeq
+        CIRCTStandardToHandshake
+        CIRCTStandardToStaticLogic
+        CIRCTStaticLogicOps
+        CIRCTSV
+        CIRCTSVTransforms
+        CIRCTTransforms
         )
 add_llvm_executable(standalone-opt standalone-opt.cpp)
 
