ExampleConversion: add lowering for NegToZeroOp
This commit adds all the boilerplate to support conversion passes and
adds a conversion of standalone.neg_to_zero to the scf dialect.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -40,6 +40,8 @@ set(LIBS
         CIRCTSV
         CIRCTSVTransforms
         CIRCTTransforms
+
+        StandaloneStandaloneToScf
         )
 add_llvm_executable(standalone-opt standalone-opt.cpp)
 
