--- a/include/Standalone/CMakeLists.txt
+++ b/include/Standalone/CMakeLists.txt
@@ -1,3 +1,10 @@
 add_mlir_dialect(StandaloneOps standalone)
 add_mlir_doc(StandaloneDialect StandaloneDialect Standalone/ -gen-dialect-doc)
 add_mlir_doc(StandaloneOps StandaloneOps Standalone/ -gen-op-doc)
+
+set(LLVM_TARGET_DEFINITIONS Passes.td)
+mlir_tablegen(Passes.h.inc -gen-pass-decls -name Conversion)
+add_public_tablegen_target(StandaloneConversionPassIncGen)
+
+add_mlir_doc(Passes -gen-pass-doc StandaloneConversionPasses ./)
+
