[Structure]: refactor structure to reflect CIRCT's
Introduces Dialect and Conversion subdirectories to cleanly separate the
different parts of functionality.

--- a/lib/Conversion/StandaloneToScf/CMakeLists.txt
+++ b/lib/Conversion/StandaloneToScf/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_mlir_library(StandaloneStandaloneToScf
     StandaloneToScf.cpp
 
+  DEPENDS
+  StandaloneConversionPassIncGen
+
   LINK_LIBS PUBLIC
   MLIRIR
   MLIRPass
