--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -21,6 +21,7 @@ set(LIBS
         CIRCTFSM
         CIRCTHandshake
         CIRCTHandshakeToFIRRTL
+        CIRCTHandshakeToHW
         CIRCTHandshakeTransforms
         CIRCTLLHD
         CIRCTLLHDToLLVM
