--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -31,6 +31,7 @@ set(LIBS
         CIRCTMSFT
         CIRCTHW
         CIRCTHWToLLHD
+        CIRCTHWTransforms
         CIRCTSCFToCalyx
         CIRCTScheduling
         CIRCTSchedulingTestPasses
