[StreamToHandshake] add type and map lowering

--- a/lib/Conversion/StreamToHandshake/CMakeLists.txt
+++ b/lib/Conversion/StreamToHandshake/CMakeLists.txt
@@ -9,6 +9,8 @@ add_mlir_library(StandaloneStreamToHandshake
   MLIRPass
   MLIRSupport
   MLIRTransforms
+  MLIRControlFlow
+  MLIRFunc
 
   CIRCTHandshake
   )
