--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -32,6 +32,7 @@ set(LIBS
         CIRCTScheduling
         CIRCTSchedulingTestPasses
         CIRCTSeq
+        CIRCTSeqTransforms
         CIRCTStandardToHandshake
         CIRCTStandardToStaticLogic
         CIRCTStaticLogicOps
