--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,15 +9,15 @@ configure_lit_site_cfg(
         ${CMAKE_CURRENT_SOURCE_DIR}/lit.cfg.py
 )
 
-set(STANDALONE_TEST_DEPENDS
+set(STREAM_TEST_DEPENDS
         FileCheck count not
-        standalone-opt
+        stream-opt
         )
 
-add_lit_testsuite(check-standalone "Running the standalone regression tests"
+add_lit_testsuite(check-stream "Running the stream regression tests"
         ${CMAKE_CURRENT_BINARY_DIR}
-        DEPENDS ${STANDALONE_TEST_DEPENDS}
+        DEPENDS ${STREAM_TEST_DEPENDS}
         )
-set_target_properties(check-standalone PROPERTIES FOLDER "Tests")
+set_target_properties(check-stream PROPERTIES FOLDER "Tests")
 
-add_lit_testsuites(STANDALONE ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS ${STANDALONE_TEST_DEPENDS})
+add_lit_testsuites(STREAM ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS ${STREAM_TEST_DEPENDS})
