--- a/include/circt-stream/Conversion/CMakeLists.txt
+++ b/include/circt-stream/Conversion/CMakeLists.txt
@@ -2,4 +2,4 @@ set(LLVM_TARGET_DEFINITIONS Passes.td)
 mlir_tablegen(Passes.h.inc -gen-pass-decls -name Conversion)
 add_public_tablegen_target(CIRCTStreamConversionPassIncGen)
 
-add_mlir_doc(Passes -gen-pass-doc CIRCTStreamConversionPasses ./)
+add_mlir_doc(Passes CIRCTStreamConversionPasses ./ -gen-pass-doc)
