[Infrastructure] Fix test dependency issue

--- a/integration_test/CMakeLists.txt
+++ b/integration_test/CMakeLists.txt
@@ -1,8 +1,6 @@
 set(STREAM_INTEGRATION_TEST_DEPENDS
   FileCheck count not split-file
-  stream-opt
-  circt-rtl-sim
-  firtool)
+  stream-opt)
 
 set(STREAM_INTEGRATION_TIMEOUT 60) # Set a 60s timeout on individual tests.
 configure_lit_site_cfg(
@@ -14,10 +12,10 @@ configure_lit_site_cfg(
 
 add_lit_testsuite(check-stream-integration "Running the stream integration tests"
   ${CMAKE_CURRENT_BINARY_DIR}
-  DEPENDS ${CIRCT_INTEGRATION_TEST_DEPENDS}
+  DEPENDS ${STREAM_INTEGRATION_TEST_DEPENDS}
   )
 set_target_properties(check-stream-integration PROPERTIES FOLDER "IntegrationTests")
 
 add_lit_testsuites(STREAM_INTEGRATION ${CMAKE_CURRENT_SOURCE_DIR}
-    DEPENDS ${STREAM_INTEGRATION_TEST_DEPS}
+    DEPENDS ${STREAM_INTEGRATION_TEST_DEPENDS}
 )
