[Transform] Add transform boilerplate code

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -38,6 +38,7 @@ set(LIBS
 
         CIRCTStreamStream
         CIRCTStreamStreamToHandshake
+        CIRCTStreamTransform
         )
 add_llvm_executable(stream-opt stream-opt.cpp)
 
